--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="微電能源 | Micro Electricity">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="微電能源以太陽能電站交易、運營維護、電站設計與工程建置一體化服務為主要營運項目。以扎實的太陽能電站工程實力為基礎，搭配工業數據分析技術、物聯網級監控技術，對太陽能電站進行預測式的健康管理與量化型的分析監控；自行開發各式通訊、檢測及維運設備，對太陽能電站進行遠端與現場的檢測維修工作；更利用區塊鏈技術，提供多樣化的太陽能金融服務平台。"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>微電能源 | Micro Electricity</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
